:pencil2: Fix external links

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,10 +45,10 @@
             <i class="material-icons">more_vert</i>
           </button>
           <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
-            <li class="mdl-menu__item"><a href="https://jupyter-tutorial.readthedocs.io/de/latest/jupyter/dashboards/panel/embed.html">Documentation</a></li>
-            <li class="mdl-menu__item"><a href="https://github.com/veit/jupyter-tutorial">Repository</a></li>
-            <li class="mdl-menu__item"><a href="https://github.com/veit/jupyter-tutorial/graphs/contributors">Contributors</a></li>
-            <li class="mdl-menu__item"><a href="https://github.com/veit/jupyter-tutorial/blob/master/LICENSE">Legal information</a></li>
+            <li class="mdl-menu__item"><a href="https://pyviz-tutorial.readthedocs.io/de/latest/bokeh/embedding-export/flask.html">Documentation</a></li>
+            <li class="mdl-menu__item"><a href="https://github.com/veit/flask-bokeh-dashboard">Repository</a></li>
+            <li class="mdl-menu__item"><a href="https://github.com/veit/flask-bokeh-dashboard/graphs/contributors">Contributors</a></li>
+            <li class="mdl-menu__item"><a href="https://github.com/veit/flask-bokeh-dashboard#BSD-3-Clause-1-ov-file">Legal information</a></li>
           </ul>
         </div>
       </header>
